--- a/new_stock_recommendation.ipynb
+++ b/new_stock_recommendation.ipynb
@@ -541,8 +541,8 @@
         "from transformers import BitsAndBytesConfig, AutoTokenizer, AutoModelForCausalLM, TextStreamer\n",
         "\n",
         "# Initialization (replace with your specific configurations)\n",
-        "access_token = \"\" # Example access token\n",
-        "finnhub_client = finnhub.Client(api_key=\"\")\n",
+        "access_token = \"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\" # Example access token\n",
+        "finnhub_client = finnhub.Client(api_key=\"cq0m7r1r01qs7bcgn4ugcq0m7r1r01qs7bcgn4v0\")\n",
         "\n",
         "# Define the BitsAndBytesConfig (example)\n",
         "quantization_config = BitsAndBytesConfig(\n",
